# shop-rs

./: Cargo.toml  README.md  config.toml  default.nix  flake.nix  shell.nix
src/: lib.rs  main.rs  ops.rs  opts.rs  types.rs
