[package]
name = "shop-rs"
version = "0.1.0"
authors = ["Jonas Grosse-Holz <aber@der-b.art>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.1", features = ["json"] }
anyhow = "1"
serde_json = "1" 
serde = { version = "1", features = ["derive"] }
