[package]
name = "shop-rs"
version = "0.1.0"
authors = ["Jonas Grosse-Holz <aber@der-b.art>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.1", features = ["json"] }
anyhow = "1"
serde_json = "1" 
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
colored = "2"
css-color-parser2 = "1"
toml = "0.5"
lazy_static = "1.4"
directories = "3"
log = "0.4.0"
env_logger = "0.8.3"
rand = "0.8.4"
